--- a/index.html
+++ b/index.html
@@ -8,15 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-
     <input type="Name">
     <input type="Class">
     <input type="Subject">
     <input type="date">
 
-    <div id="quiz"></div>
-    <button id="submit">Get Results</button>
-    <div id="results"></div>
 </body>
 </html>
 
@@ -24,7 +20,7 @@
 
 
 
-<!-- One can create an object by declaring it with the const keyword.
+<!-- One can create an object by declaring it with the const  or let keyword.
  for example
  const person = {
     firstName: "sandra",
@@ -34,6 +30,6 @@
   }; Our object person has been  declared as const person.
 
 
-  A Scope of a function is what  determines the accessibility or visibility of variables in a function.They determine whether the variable  is  a local or global one.
+  A Scope of a variable is what  determines the accessibility  of variables in a function.They determine whether the variable can be accessed  locally or globally .
  -->
 
